# BOT

./: CMakeLists.txt  LICENSE  README  index.html
apps/: CMakeLists.txt  TrackingPredictor-hdf5.cxx  TrackingPredictor.cxx  TrackingTrainer-hdf5.cxx  TrackingTrainer.cxx
data/: event-configuration-cell.ini  event-configuration-worm.ini  link-to-test-sequence.txt  test-image-seg-1.h5  test-image-seg-99.h5  tiff-sample-2d-uint16.tiff  tiff-sample-2d-uint8.tiff  tiff-sample-3d-uint16.tiff  tiff-sample-3d-uint8.tiff
include/: AverageObject.hxx  CPLEXSolverSystem.hxx  Context.hxx  ConvexImage.hxx  Event.hxx  EventConfiguration.hxx  FramePair.hxx  HDF5ReaderWriter.hxx  HammingLossFunction.hxx  HypothesisGenerator.hxx  HypothesisSpace.hxx  InputOutput.cxx  InputOutput.hxx  MeasureAnglePattern.hxx  MeasureAppointment.hxx  MeasureEarthMoversDistance.hxx  MeasureExtractor.hxx  MeasureFactory.cxx  MeasureFactory.hxx  MeasureL1L2Distance.hxx  Multiplet.hxx  MultipletsGenerator.hxx  NearestNeighborGenerator.hxx  Object.hxx  ObjectFeatureBorderDistance.hxx  ObjectFeatureBorderOverlap.hxx  ObjectFeatureBoundingBox.hxx  ObjectFeatureCenters.hxx  ObjectFeatureEccentricity.hxx  ObjectFeatureExtractor.hxx  ObjectFeatureFactory.cxx  ObjectFeatureFactory.hxx  ObjectFeatureIntensityDeviation.hxx  ObjectFeatureIntensityHistogram.hxx  ObjectFeatureIntensityMean.hxx  ObjectFeatureIntensitySum.hxx  ObjectFeatureMassEvenness.hxx  ObjectFeaturePosition.hxx  ObjectFeaturePrincipalComponents.hxx  ObjectFeatureRoundness.hxx  (+14 more)
tests/: CMakeLists.txt  Curly.hxx  Larry.hxx  Moe.hxx  Stooge.cxx  Stooge.hxx  test-ConvexImage.cxx  test-CplexSolver.cxx  test-EventConfiguration.cxx  test-HypothesisSpace.cxx  test-NearestNeighborGenerator.cxx  test-ObjectFeatureFactory.cxx  test-ObjectsGenerator.cxx  test-TIFFReaderWriter.cxx  test-TrackingPredictor.cxx  test-TrackingTrainer.cxx  test-cpp-factory.cxx  test-vigranumpy-extensions.cxx  tiffread.cxx
